==> Pluscrafter/SHARKSKY/01_Flightcontroller/Code/Flightcontroller/Src/RF24.cpp <==
#include "nRF24L01.h"
#include "RF24_config.h"
#include "RF24.h"

void RF24::csn(GPIO_PinState mode)
{
#ifdef DMA
	if (mode == HIGH){
		GPIOcsn->BSRR = 1 << s_bit_csn;
	}
	else{
		GPIOcsn->BSRR = 1 << r_bit_csn;
	}
#else
	HAL_GPIO_WritePin(csn_pin_port, csn_pin, mode);
#endif
}

void RF24::ce(GPIO_PinState level)
{
#ifdef DMA
	if (level == HIGH){
		GPIOce->BSRR = 1 << s_bit_ce;
	}
	else{
		GPIOce->BSRR = 1 << r_bit_ce;
	}
#else
	HAL_GPIO_WritePin(ce_pin_port, ce_pin, level);
#endif
}

uint8_t RF24::read_payload(void* buf, uint8_t data_len)
{
	uint8_t status;
	uint8_t* current = reinterpret_cast<uint8_t*>(buf);
	uint8_t temp = R_RX_PAYLOAD;
	if (data_len > payload_size)
		data_len = payload_size;
	uint8_t blank_len = dynamic_payloads_enabled ? 0 : payload_size - data_len;

	//printf("[Reading %u bytes %u blanks]",data_len,blank_len);
#ifdef SERIAL_DEBUG
	char buffer[100];
	sprintf(buffer, "[Reading %u bytes %u blanks]\n",data_len,blank_len);
	HAL_UART_Transmit(&huart1,(uint8_t *)buffer,strlen(buffer),HAL_MAX_DELAY);
#endif
	beginTransaction();
#ifdef DMA
	HAL_SPI_Transmit_DMA(&spi,&temp,1);
	HAL_SPI_Receive_DMA(&spi,&status,1);
	HAL_SPI_Receive_DMA(&spi,current,data_len);
	temp = HIGH;
	while (blank_len--){
		HAL_SPI_Transmit_DMA(&spi,&temp,1);
	}
	while (HAL_SPI_GetState(&spi) != HAL_SPI_STATE_READY);
#else
	HAL_SPI_TransmitReceive(hspix, &temp, &status, 1, HAL_MAX_DELAY);
	HAL_SPI_Receive(hspix, current, data_len, HAL_MAX_DELAY);
	temp = HIGH;
	while (blank_len--)
	{
		HAL_SPI_Transmit(hspix, &temp, 1, HAL_MAX_DELAY);
	}
#endif
	endTransaction();

	return status;
}

bool RF24::begin(void)
{

	uint8_t setup = 0;

//    // Initialize pins
//    if (ce_pin != csn_pin) pinMode(ce_pin,OUTPUT);
//
//    #if ! defined(LITTLEWIRE)
//      if (ce_pin != csn_pin)
//    #endif
//        pinMode(csn_pin,OUTPUT);
//
	//_SPI.begin();
	ce(LOW);
	csn(HIGH);
#if defined (__ARDUINO_X86__)
	HAL_Delay(100);
#endif

	// Must allow the radio time to settle else configuration bits will not necessarily stick.
	// This is actually only required following power up but some settling time also appears to
	// be required after resets too. For full coverage, we'll always assume the worst.
	// Enabling 16b CRC is by far the most obvious case if the wrong timing is used - or skipped.
	// Technically we require 4.5ms + 14us as a worst case. We'll just call it 5ms for good measure.
	// WARNING: Delay is based on P-variant whereby non-P *may* require different timing.
	HAL_Delay(5);

	// Reset NRF_CONFIG and enable 16-bit CRC.
	write_register( NRF_CONFIG, 0x0C);

	// Set 1500uS (minimum for 32B payload in ESB@250KBPS) timeouts, to make testing a little easier
	// WARNING: If this is ever lowered, either 250KBS mode with AA is broken or maximum packet
	// sizes must never be used. See documentation for a more complete explanation.
	setRetries(5, 15);

	// Reset value is MAX
	//setPALevel( RF24_PA_MAX ) ;

	// check for connected module and if this is a p nRF24l01 variant
	//
	if (setDataRate(RF24_250KBPS))
	{
		p_variant = true;
	}
	setup = read_register(RF_SETUP);
	/*if( setup == 0b00001110 )     // register default for nRF24L01P
	 {
	 p_variant = true ;
	 }*/

	// Then set the data rate to the slowest (and most reliable) speed supported by all
	// hardware.
	setDataRate(RF24_1MBPS);

	// Initialize CRC and request 2-byte (16bit) CRC
	//setCRCLength( RF24_CRC_16 ) ;

	// Disable dynamic payloads, to match dynamic_payloads_enabled setting - Reset value is 0
	toggle_features();
	write_register(FEATURE, 0);
	write_register(DYNPD, 0);
	dynamic_payloads_enabled = false;

	// Reset current status
	// Notice reset and flush is the last thing we do
	write_register(NRF_STATUS, _BV(RX_DR) | _BV(TX_DS) | _BV(MAX_RT));

	// Set up default configuration.  Callers can always change it later.
	// This channel should be universally safe and not bleed over into adjacent
	// spectrum.
	setChannel(76);

	// Flush buffers
	flush_rx();
	flush_tx();

	powerUp(); //Power up by default when begin() is called

	// Enable PTX, do not write CE high so radio will remain in standby I mode ( 130us max to transition to RX or TX instead of 1500us from powerUp )
	// PTX should use only 22uA of power
	write_register(NRF_CONFIG, (read_register(NRF_CONFIG)) & ~_BV(PRIM_RX));

	// if setup is 0 or ff then there was no response from module
	return (setup != 0 && setup != 0xff);
}

void RF24::stopListening(void)
{
	ce(LOW);

	HAL_Delay(txDelay); //us

	if (read_register(FEATURE) & _BV(EN_ACK_PAY))
	{
		HAL_Delay(txDelay); //200us
		flush_tx();
	}
	//flush_rx();
	write_register(NRF_CONFIG, (read_register(NRF_CONFIG)) & ~_BV(PRIM_RX));
	write_register(EN_RXADDR, read_register(EN_RXADDR) | _BV(pgm_read_byte(&child_pipe_enable[0]))); // Enable RX on pipe0

	//HAL_DelayHAL_MAX_DELAY;//us

}

void RF24::startWrite(const void* buf, uint8_t len, const bool multicast)
{

	// Send the payload

	//write_payload( buf, len );
	write_payload(buf, len, multicast ? W_TX_PAYLOAD_NO_ACK : W_TX_PAYLOAD);
	ce(HIGH);
#if !defined(F_CPU) || F_CPU > 20000000
	HAL_Delay(10); //us
#endif
	ce(LOW);

}
